package com.flight.airline;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class FlightTicketBookingApplication {

  public static void main(String[] args) {
    SpringApplication.run(FlightTicketBookingApplication.class, args);
  }

}
