package com.flight.airline.model;

public class Admin {

	String username;
	String password;

	public Admin() {

	}

	public Admin(String username, String password, String a_email) {
		super();
		this.username = username;
		this.password = password;
	}

	public String getUsername() {
		return username;
	}

	public void setUsername(String username) {
		this.username = username;
	}

	public String getPassword() {
		return password;
	}

	public void setPassword(String password) {
		this.password = password;
	}

}
