@startuml
interface com.devrev.flightticketbooking.dao.BookingsDao {
}
class com.devrev.flightticketbooking.controller.UserController {
}
class com.devrev.flightticketbooking.util.DateUtil {
}
class com.devrev.flightticketbooking.service.LoginService {
}
class com.devrev.flightticketbooking.model.Flights {
}
interface com.devrev.flightticketbooking.dao.UserDao {
}
class com.devrev.flightticketbooking.dao.FlightDaoImpl {
}
class com.devrev.flightticketbooking.model.Bookings {
}
class com.devrev.flightticketbooking.dao.BookingsDaoImpl {
}
class com.devrev.flightticketbooking.controller.AdminController {
}
interface com.devrev.flightticketbooking.dao.FlightDao {
}
class com.devrev.flightticketbooking.FlightTicketBookingApplication {
}
class com.devrev.flightticketbooking.dao.ConnectionHandler {
}
class com.devrev.flightticketbooking.dao.UserDaoImpl {
}
class com.devrev.flightticketbooking.model.Admin {
}
class com.devrev.flightticketbooking.model.User {
}
class com.devrev.flightticketbooking.service.FlightService {
}


com.devrev.flightticketbooking.dao.FlightDao <|.. com.devrev.flightticketbooking.dao.FlightDaoImpl
com.devrev.flightticketbooking.dao.BookingsDao <|.. com.devrev.flightticketbooking.dao.BookingsDaoImpl
com.devrev.flightticketbooking.dao.UserDao <|.. com.devrev.flightticketbooking.dao.UserDaoImpl
@enduml